improved mobile responsiveness

--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -2,32 +2,32 @@
     <div class="footer" id="footer">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-2  col-md-2 col-sm-4 col-xs-6">
-                    <h3> Services </h3>
+                <div class="col-lg-2  col-md-2 col-sm-4 col-2">
+                    <h5> Services </h5>
                     <ul>
                       <li> <a href="#"> Sales </a> </li>
                         <li> <a href="#"> Marketing </a> </li>
                         <li> <a href="#"> Home Delivery </a> </li>
                     </ul>
                 </div>
-                <div class="col-lg-2  col-md-2 col-sm-4 col-xs-6">
-                    <h3> About </h3>
+                <div class="col-lg-2  col-md-2 col-sm-4 col-3">
+                    <h5 class="ml-2"> About </h5>
                     <ul>
                         <li> <a href="#"> About Go-Groups </a> </li>
                         <li> <a href="#"> Terms of Services </a> </li>
                         <li> <a href="#"> Our Team </a> </li>
                     </ul>
                 </div>
-                <div class="col-lg-2  col-md-2 col-sm-4 col-xs-6">
-                    <h3> Contact </h3>
+                <div class="col-lg-2  col-md-2 col-sm-4 col-3">
+                    <h5> Contact </h5>
                     <ul>
                         <li> <a href="#"> Contact Marketing </a> </li>
                         <li> <a href="#"> Contact Sales </a> </li>
                         <li> <a href="#"> Contact Delivery </a> </li>
                     </ul>
                 </div>
-                <div class="col-lg-3  col-md-3 col-sm-6 col-xs-12 ">
-                    <h3> Subscribe Us </h3>
+                <div class="col-lg-3  col-md-3 col-sm-6 col-4">
+                    <h5> Subscribe Us </h5>
                     <ul>
                         <li>
                             <div class="input-append subscribe-btn text-center">
@@ -40,8 +40,6 @@
                         <li> <a href="#" > <i class=" fa fa-facebook">   </i> </a> </li>
                         <li> <a href="#"> <i class="fa fa-twitter">   </i> </a> </li>
                         <li> <a href="#"> <i class="fa fa-google-plus">   </i> </a> </li>
-                        <li> <a href="#"> <i class="fa fa-pinterest">   </i> </a> </li>
-                        <li> <a href="#"> <i class="fa fa-youtube">   </i> </a> </li>
                     </ul>
                 </div>
             </div>
