--- a/src/app/layout/header/search/search.component.html
+++ b/src/app/layout/header/search/search.component.html
@@ -1,27 +1,47 @@
 <!-- the to header to diplay logo and search -->
-<div class="d-flex top-header bg-light">
-    <div class="p-2 mr-auto">
-        <img src="/assets/images/cropped-gg.png" alt="GG-logo" style="width: 200px;">
+<div class="row">
+    <div class="col">
+        <div class="">
+            <div class="row">
+                <div class="col-3 col-sm-3 col-md-3 col-lg-3">
+                    <div class="py-2 mr-auto">
+                        <img src="/assets/images/cropped-gg.png" alt="GG-logo" style="width: 150px;">
+                    </div>
+                </div>
+                <div class="col-6 col-sm-7 col-md-7 col-lg-7 nopadding">
+                    <div class="py-2">
+                        <form class="form-inline search-form">
+                            <div class="input-group">
+                                <input type="search" class="form-control" placeholder="Search" name="product.name">
+                                <div class="input-group-append">
+                                    <span class="input-group-text">{{componentName}}</span>
+                                    <!-- <button class="btn btn-primary" type="button">OK</button> -->
+                                    
+                                    <input class="btn btn-success" type="submit" value="Search">
+                                   
+                                </div> 
+                            </div> 
+                        </form>
+                    </div> 
+                </div>
+                <div class="col-2 col-sm-1 col-md-1 col-lg-1">
+                    <div class="user-account mt-3">
+                        <small><a routerLink="/log-in"><i class="fa fa-sign-in"></i>Login</a></small>
+                    </div> 
+                </div>
+                <div class="col-1 col-sm-1 col-md-1 col-lg-1 nopadding">
+                    <div class="user-account mt-3">
+                        <small><a routerLink="/sign-up"><i class="fa fa-user"></i>Signup</a></small>
+                    </div> 
+                </div>
+            </div>         
+            <!-- <div class="p-2 mt-3 mx-4 user-account">
+                <a href="#">
+                    <i class="fa fa-user" style="font-size:29px"></i>
+                    User
+                </a>
+            </div>   -->
+        </div>
     </div>
-    <div class="p-2 mr-4">
-        <form class="form-inline mt-3 search-form" action="">
-            <div class="input-group">
-                <input type="search" class="form-control" placeholder="Search" name="product.name">
-                <div class="input-group-append">
-                    <span class="input-group-text">{{componentName}}</span>
-                    <!-- <button class="btn btn-primary" type="button">OK</button> -->
-                    
-                    <button class="btn btn-success" type="submit">Search</button>
-                   
-                </div> 
-            </div> <a routerLink="/log-in">Log In</a><a routerLink="/sign-up">Sign Up</a>
-        </form>
-    </div>  
-    <!--<div class="p-2 mt-3 mx-4 user-account">
-        <a href="#">
-            <i class="fa fa-user" style="font-size:29px"></i>
-            User
-        </a>
-    </div>  
-</div>-->
+</div>
 <!-- End of Top Header -->
