--- a/src/app/products/product-list/product-detail/product-detail.component.html
+++ b/src/app/products/product-list/product-detail/product-detail.component.html
@@ -67,7 +67,7 @@
             </div>
             <hr>
             <br>
-            <div class="row">
+            <div class="row" *ngIf="fetchingData">
                 <div class="col">
                     <h6>Explore other products</h6>
                 </div>
