--- a/src/app/products/product-list/product-detail/product-edit/product-edit.component.html
+++ b/src/app/products/product-list/product-detail/product-edit/product-edit.component.html
@@ -1,8 +1,8 @@
 <div class = "container-fluid bg-light">
     <div class = "row row-styles">
-        <div class = "col-sm-2"></div>
-        <div class = "col-sm-8 form-div">
-            <h3 class = "text-capitalize">Edit product</h3>
+        <div class = "col-1 col-sm-2"></div>
+        <div class = "col col-sm-8 shadow p-4">
+            <h3 class = "">Edit product</h3>
             <div class="alert alert-success alert-dismissible m-2" *ngIf="dataSaved && !Error">
                 <button type="button" class="close" data-dismiss="alert">x</button>
                 {{ successMessage }}
@@ -63,10 +63,19 @@
                     ngModel 
                     name = "url">
                 </div>
-                <button class = "btn btn-primary" type = "submit">Update</button>
+                <div class="clearfix">
+                    <div class="float-left">
+                        <button class = "btn btn-primary w-5 shadow rounded-0" type = "submit">Update</button>
+                    </div>
+                    <div class="float-right">
+                        <button class = "btn btn-outline-secondary w-5 shadow rounded-0" 
+                                type = "button"
+                                (click)="onCloseForm()">close</button>
+                    </div>
+                </div>
             </form>
             
         </div>
-        <div class = "col-sm-2"></div>
+        <div class = " col-1 col-sm-2"></div>
     </div>
 </div>
