--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -14,11 +14,11 @@
                     <router-outlet></router-outlet>        
                 </div>
     </div>
-    <div class="row product-list m-0" >
-        <div class="col-md-2 product-list"></div>
-        <div class=" col-12 col-sm-12 col-md-8 shadow border product-details bg-light">
+    <div class="row product-list mb-5" >
+        <div class="col-md-2 col-sm-2 col-lg-2 product-list"></div>
+        <div class="col col-sm-8 col-md-8 shadow border product-details bg-light">
             
-            <div class="form-control text-center mx-auto " 
+            <div class="form-control text-center mb-5" 
                 style="border: none;"
                 *ngIf="!fetchingData && !getCatError">
                 <div>
@@ -76,7 +76,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="col-md-2 product-list"></div>
+        <div class="col-sm-2 col-md-2 product-list"></div>
     </div>
     
 </div>
