--- a/src/app/authentication/log-in/log-in.component.html
+++ b/src/app/authentication/log-in/log-in.component.html
@@ -1,15 +1,24 @@
-<div class="container body">
-    <h1>ACCOUNT LOGIN</h1>
-     
-       <p>EMAIL <br>
-        <input type="text" placeholder="email address">
-       </p>
-     <p>PASSWORD <br>
-       <input type="password">
-   </p>
-   <p style="text-align: center;">Forgotten password?</p>
-   <div>
-       <input class="sign" type="submit" value="LOG IN">
-   </div>
+<div class="container">
+    <div class="row">
+      <div class="col-sm-3 col-md-3 col-lg-3">
+      </div>
+      <div class="col col-sm-6 col-md-6 col-lg-6 shadow m-5">  
+        <form class="form-group">
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input type="text" class="form-control" placeholder="Email">
+          </div>
+          <div class="form-group">
+              <label for="pwd">Password</label>
+              <input type="text" class="form-control" placeholder="password">
+          </div>
+          <button class="sign" type="submit">Login</button>
+        </form> 
+          <a href="#">
+            <p style="text-align: center;">Forgotten password?</p>
+          </a> 
+      </div>
+      <div class="col-sm-3 col-md-3 col-lg-3"></div>
+    </div>
 
 </div>
