--- a/src/app/authentication/sign-up/sign-up.component.html
+++ b/src/app/authentication/sign-up/sign-up.component.html
@@ -1,15 +1,36 @@
-<div class="container account">
-        <h1>Sign up for an Account</h1>
-         <p>USER NAME<br>
-           <input type="text" ></p>
-           <p>EMAIL <br>
-            <input type="text" placeholder="email address">
-           </p>
-         <p>PASSWORD <br>
-           <input type="password">
-       </p>
-           <!--<p style="text-align: center; color:white;">SIGN UP</p>-->
-           <input class="sign" type="submit" value="SIGN UP">
-    
+<div class="container">
+    <div class="row">
+      <div class="col-sm-3 col-md-3 col-lg-3">
+      </div>
+      <div class="col col-sm-6 col-md-6 col-lg-6 shadow m-5">  
+        <form class="form-group">
+          <div class="form-group mt-2">
+              <label for="usn">Username</label>
+              <input type="text" class="form-control" placeholder="Username">
+            </div>
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input type="text" class="form-control" placeholder="Email">
+          </div>
+
+          <div class="form-group">
+              <label for="pwd">Password</label>
+              <input type="text" class="form-control" placeholder="password">
+          </div>
+          <div class="form-group">
+              <label for="pwdconfirm">Confirm Password</label>
+              <input type="text" class="form-control">
+          </div>
+          <input class="sign" type="submit" value="signup">
+        </form> 
+          <p  style="text-align: center;">Have an account??</p>
+          <a href="#">
+            <p style="text-align: center;">Login</p>
+          </a> 
+      </div>
+      <div class="col-sm-3 col-md-3 col-lg-3"></div>
     </div>
+
+</div>
+
     
