--- a/src/app/category/category-list/category-detail/category-detail.component.html
+++ b/src/app/category/category-list/category-detail/category-detail.component.html
@@ -14,7 +14,7 @@
         </div>
     </div>
     <div class="row">
-            <div class="col border shadow" style="background: none;">
+            <div class="col-12 border shadow" style="background: none;">
                 <!-- Nav tabs -->
                 <ul class="nav nav-tabs" role="tablist">
                     <li class="nav-item mr-1">
