--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -22,7 +22,7 @@
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link"
-                    [routerLink]="['/']"
+                    [routerLink]="['/category/category-list']"
                     routerLinkActive = "active"
                     ><i class="fa fa-home" style="font-size: 25px"></i> HOME
                     
