--- a/src/app/authentication/log-in/log-in.component.html
+++ b/src/app/authentication/log-in/log-in.component.html
@@ -1,8 +1,8 @@
 <div class="container">
     <div class="row">
-      <div class="col-sm-3 col-md-3 col-lg-3">
+      <div class="col-md-3 col-lg-3">
       </div>
-      <div class="col col-sm-6 col-md-6 col-lg-6 shadow m-5">  
+      <div class="col col-md-6 col-lg-6 shadow m-4">  
         <form class="form-group">
           <div class="form-group">
             <label for="email">Email</label>
@@ -18,7 +18,7 @@
             <p style="text-align: center;">Forgotten password?</p>
           </a> 
       </div>
-      <div class="col-sm-3 col-md-3 col-lg-3"></div>
+      <div class="col-md-3 col-lg-3"></div>
     </div>
 
 </div>
