--- a/src/app/authentication/sign-up/sign-up.component.html
+++ b/src/app/authentication/sign-up/sign-up.component.html
@@ -1,8 +1,8 @@
 <div class="container">
     <div class="row">
-      <div class="col-sm-3 col-md-3 col-lg-3">
+      <div class="col-md-3 col-lg-3">
       </div>
-      <div class="col col-sm-6 col-md-6 col-lg-6 shadow m-5">  
+      <div class="col col-md-6 col-lg-6 shadow m-3">  
         <form class="form-group">
           <div class="form-group mt-2">
               <label for="usn">Username</label>
@@ -28,7 +28,7 @@
             <p style="text-align: center;">Login</p>
           </a> 
       </div>
-      <div class="col-sm-3 col-md-3 col-lg-3"></div>
+      <div class="col-md-3 col-lg-3"></div>
     </div>
 
 </div>
