--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -51,7 +51,7 @@
                     <th>Description</th>
                 </thead>
                 <tbody class = "text-primary">
-                    <tr *ngFor = "let product of products" class = "col-sm-4">
+                    <tr *ngFor = "let product of products" class = "col-4 col-sm-4">
                         <td>
                             <img [src] = "product.imageUrl" id = "product-Thumbnail">
                         </td>
@@ -61,16 +61,21 @@
                                 Caregory:{{product.category.name}}<br>
                                 Quantity:{{product.quantity}}<br>
                                 Price:{{product.price}}<br>
-                                <a class="btn btn-primary"[routerLink]="['/edit-product', product.id]">
-                                <i class = "fa fa-edit"style="font-size: 15px; color: whitesmoke;">
-                                </i>Edit
-                                </a>&nbsp;
+                                <div class="dropdown dropright">
+                                    <small type="button" class="btn btn-outline-secondary dropdown-toggle" data-toggle="dropdown"> 
+                                    </small>
+                                    <div class="dropdown-menu">
+                                        <a class="dropdown-item" [routerLink]="['/edit-product', product.id]">
+                                            <i class = "fa fa-edit"style="font-size: 15px; color: black;"></i>Edit</a>
+                                        <a class="dropdown-item" id="deleteProductBtn"
+                                            data-toggle="modal" 
+                                            data-target="#deleteProductModal" 
+                                            (click)="onShowModal(product.id)"> 
+                                            <i class = "fa fa-trash" style="font-size: 15px; color: black;"></i>
+                                            Delete</a>                
+                                    </div>
+                                </div>
                             </small>
-                            
-                            <button class="btn btn-danger" id="deleteProductBtn" data-toggle="modal" data-target=
-                            "#deleteProductModal" (click)="onShowModal(product.id)">
-                                <i class = "fa fa-trash" style="font-size: 15px; color: whitesmoke;"></i>Delete
-                            </button>
                         </td>
                     </tr>
                 </tbody>
