Delete buttons disabled

--- a/src/app/category/category-list/category-delete/category-delete.component.html
+++ b/src/app/category/category-list/category-delete/category-delete.component.html
@@ -22,6 +22,7 @@
      <strong> Are you sure you want to delete this category?</strong>
      <div class="m-3">
          <button type="button" 
+                disabled
                 class="btn btn-danger shadow rounded-0 mr-3"
                 (click)="onClickYes()">Yes
         </button>
