--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -70,7 +70,8 @@
                                         <a class="dropdown-item" id="deleteProductBtn"
                                             data-toggle="modal" 
                                             data-target="#deleteProductModal" 
-                                            (click)="onShowModal(product.id)"> 
+                                            (click)="onShowModal(product.id)"
+                                            style="cursor: pointer;"> 
                                             <i class = "fa fa-trash" style="font-size: 15px; color: black;"></i>
                                             Delete</a>                
                                     </div>
@@ -102,7 +103,7 @@
                     <div class="alert alert-light alert-dismissible fade show" 
                         id="category-delete-info"
                         *ngIf="showInfo">
-                        All Products with this category will be deleted
+                        This Product will be deleted!
                     </div>
                     <div class="alert alert-success fade show" 
                         id="category-delete-info"
@@ -122,6 +123,7 @@
                         <strong> Are you sure you want to delete this category?</strong>
                         <div class="m-3">
                             <button type="button" 
+                                    disabled
                                     class="btn btn-danger shadow rounded-0 mr-3"
                                     (click)="onClickYes()">Yes
                             </button>
