--- a/src/app/layout/header/header.component.css
+++ b/src/app/layout/header/header.component.css
@@ -21,7 +21,7 @@ nav{
 } */
 
 
-.collapsibleNavbar a:link, a:visited {
+.collapsibleNavbar a:link {
 	color: #78828D;
     color:#fff;
   /* background-color: #117DAC; */
