--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,13 @@
 <div class="container-fluid app-template">
     <header>
         <app-header></app-header>
-        <select #langSelect (change)="translate.use(langSelect.value)">
-            <option *ngFor="let lang of translate.getLangs()" [value]="lang" [selected]="lang === translate.currentLang">{{ lang}}</option>
-        </select>
+        <!-- <span>
+            <i class="fa fa-language" style="font-size:24px"></i>
+            <select #langSelect (change)="translate.use(langSelect.value)">
+                <option value=""></option>
+                <option *ngFor="let lang of translate.getLangs()" [value]="lang" [selected]="lang === translate.currentLang">{{ lang}}</option>
+            </select>
+        </span> -->
     </header>
     <section class="bg-light">
         <router-outlet></router-outlet>
