--- a/src/app/layout/header/search/search.component.html
+++ b/src/app/layout/header/search/search.component.html
@@ -3,23 +3,29 @@
     <div class="col">
         <div class="">
             <div class="row">
-                <div class="col-4 col-sm-4 col-md-4 col-lg-4">
-                    <div class="py-2 mr-auto">
-                        <img src="/assets/images/cropped-gg.png" alt="GG-logo" style="width: 150px;">
+                <div class="col-3 col-sm-3 col-md-4 col-lg-4">
+                    <div class="py-2">
+                        <img src="/assets/images/cropped-gg.png" alt="GG-logo" style="width: 100px;">
                     </div>
                 </div>
-                <div class="col-6 col-sm-6 col-md-6 col-lg-6">
-                    <div class="clearfix">
-                       <div class="float-right">
-                            <div class="user-account mx-3, mt-3">
+                <div class="col-9 col-sm-9 col-md-6 col-lg-6">
+                    <div class="">
+                       <div class="d-flex flex-row-reverse">
+                            <div class="user-account mt-3">
                                 <small><a routerLink="/log-in"><i class="fa fa-sign-in"></i>{{'LINKS.login'|translate}}</a></small>
                             </div> 
+                            <div class="user-account mr-1 mt-3">
+                                <small><a routerLink="/sign-up"><i class="fa fa-user"></i>{{'LINKS.signup'|translate}}</a></small>
+                            </div> 
+                            <div class="user-account mr-1 mt-3">
+                                <span>
+                                    <i class="fa fa-language" style="font-size:24px"></i>
+                                    <select #langSelect (change)="translate.use(langSelect.value)">
+                                        <option *ngFor="let lang of translate.getLangs()" [value]="lang" [selected]="lang === translate.currentLang">{{ lang}}</option>
+                                    </select>
+                                </span>
+                            </div>
                        </div>
-                       <div class="float-right">
-                        <div class="user-account mx-3 mt-3">
-                            <small><a routerLink="/sign-up"><i class="fa fa-user"></i>{{'LINKS.signup'|translate}}</a></small>
-                        </div> 
-                   </div>
                     </div>
                 </div>
                 
@@ -35,7 +41,8 @@
                 </div> -->
             </div> 
             <div class="row">
-                <div class="col-11 col-sm-11 col-md-11 col-lg-11 nopadding">
+                <div class="col-2"></div>
+                <div class="col-10 col-sm-10 col-md-11 col-lg-11">
                     <div class="d-flex flex-row-reverse">
                         <div class="py-2">
                             <form class="form-inline search-form">
@@ -52,7 +59,7 @@
                             </form>
                         </div>
                     </div> 
-                </div>
+                </div>                
             </div>        
             <!-- <div class="p-2 mt-3 mx-4 user-account">
                 <a href="#">
